--- a/client.html
+++ b/client.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="./client.js"></script>
+<script type="text/javascript" src="./js/local.js"></script>
+<script type="text/javascript" src="./js/client.js"></script>
 </head>
 <body>
 <div id="container">
