renaming of js file updating local.js.template

--- a/client.html
+++ b/client.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="./js/local.js"></script>
-<script type="text/javascript" src="./js/client.js"></script>
+<script type="text/javascript" src="./js/websocket.js"></script>
 </head>
 <body>
 <div id="container">
