--- a/client.html
+++ b/client.html
@@ -3,10 +3,32 @@
 <script type="text/javascript" src="http://codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="./js/local.js"></script>
 <script type="text/javascript" src="./js/websocket.js"></script>
+<script type="text/javascript" src="./js/client.js"></script>
+<style>
+    #world {
+        width: 100%;
+        height: 80%;
+        background-color: #999;
+        padding: 5%;
+    }
+    
+    #phone {
+        background-color: #000;
+        width: 900px;
+        height: 400px;
+        border-radius: 10px;
+        -webkit-transform:rotate(0deg);
+    }
+</style>
 </head>
 <body>
-<div id="container">
+<p>connectionId:</p>
+<p id="uuid"></p>
+<div id="debug">
 
+</div>
+<div id="world">
+    <div id="phone"></div>
 </div>
 </body>
 </html>
